--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Home', root_path %>
+<%= link_to 'O mnie', home_about_path %>
+
 <h1 styles="text-align: center;">Cześć</h1>
 <p>Jesteś na stronie głównej.</p>
-<p><button text="Idż dalej!"></p>
