Pliki częściowe: _header i _footer

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,6 @@
-<%= link_to 'Home', root_path %>
-<%= link_to 'O mnie', home_about_path %>
+<%= render 'home/header' %>
 
 <h1>O mnie</h1>
 <p>To jest strona opisowa.</p>
+
+<%= render 'home/footer' %>
