--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
-<%= link_to 'Home', root_path %>
-<%= link_to 'O mnie', home_about_path %>
+<%= render 'home/header' %>
 
 <h1 styles="text-align: center;">Cześć</h1>
 <p>Jesteś na stronie głównej.</p>
+
+<%= render 'home/footer' %>
