--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= render 'home/header' %>
 <%= yield %>
-
+<%= render 'home/footer' %>
 </body>
 </html>
