--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render 'home/header' %>
-<%= yield %>
-<%= render 'home/footer' %>
+  <div class="container">
+    <%= render 'home/header' %>
+    <%= yield %>
+    <%= render 'home/footer' %>
+  </div>
 </body>
 </html>
