--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -15,21 +15,17 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to 'O mnie', home_about_path %></li>
+        <li><%= link_to 'Piny', pins_path %></li>
       </ul>
       
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Konta <span class="caret"></span></a>
-          <ul class="dropdown-menu">
             <% if user_signed_in? %>
               <li><%= link_to 'Moje konto', edit_user_registration_path %></li>
-              <li><%= link_to 'Wyloguj', destroy_user_session_path, method: :delete %></li>
+              <li><%= link_to 'Dodaj pin ->', new_pin_path %></li>
+              <li><%= link_to 'Wyloguj ->|', destroy_user_session_path, method: :delete %></li>
             <% else %>
               <li><%= link_to 'Logowanie', new_user_session_path %></li>
-              <li><%= link_to 'Rejestracja', new_user_registration_path %></li>
             <% end %>
-          </ul>
-        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
